--- a/index.html
+++ b/index.html
@@ -1,347 +1,194 @@
-<!DOCTYPE html>
-<html lang="es">
+<!DOCTYPE html><html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sorpresas in Style</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Desayunos Bonitos</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
-      padding: 0;
-      background-color: #f4f4f9;
-    }
-
-    header {
-      background-color: #ffb6c1;
-      padding: 1em;
-      text-align: center;
-    }
-
-    #company-logo {
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      object-fit: cover;
-    }
-
-    #productos-container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      padding: 20px;
-    }
-
-    .producto-tarjeta {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 16px;
-      margin: 16px;
-      text-align: center;
-      width: 200px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.2s;
-      background-color: white;
-    }
-
-    .producto-tarjeta:hover {
-      transform: translateY(-5px);
-    }
-
-    .producto-imagen {
-      width: 100%;
-      height: auto;
-      border-radius: 8px;
-    }
-
-    .producto-nombre {
-      font-size: 18px;
-      margin: 8px 0;
-    }
-
-    .producto-precio {
-      font-size: 16px;
+      font-family: Arial, sans-serif;
+      background-color: #ffffff;
       color: #333;
-    }
+    }header {
+  background-color: #00c6a9;
+  color: white;
+  padding: 1rem;
+  text-align: center;
+}
 
-    .producto-boton {
-      margin-top: 10px;
-      padding: 10px;
-      background-color: #ffb6c1;
-      border: none;
-      border-radius: 50%;
-      cursor: pointer;
-      font-size: 18px;
-    }
+.admin-panel {
+  padding: 1rem;
+  background: #f2f2f2;
+}
 
-    #carrito {
-      padding: 20px;
-      background-color: #fff;
-      border-top: 1px solid #ddd;
-    }
+.admin-panel input[type="text"],
+.admin-panel input[type="number"],
+.admin-panel input[type="file"] {
+  margin: 0.5rem;
+  padding: 0.5rem;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
 
-    #botonAdmin {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      font-size: 24px;
-      background: none;
-      border: none;
-      cursor: pointer;
-    }
+.admin-panel button {
+  background-color: #00c6a9;
+  color: white;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.4);
-      padding-top: 60px;
-    }
+.products {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  gap: 1rem;
+  padding: 1rem;
+}
 
-    .modal-content {
-      background-color: #fefefe;
-      margin: 5% auto;
-      padding: 20px;
-      border: 1px solid #888;
-      width: 90%;
-      max-width: 400px;
-      position: relative;
-      cursor: move;
-    }
+.card {
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  position: relative;
+}
 
-    .close {
-      color: #aaa;
-      float: right;
-      font-size: 28px;
-      font-weight: bold;
-    }
+.card img {
+  width: 100%;
+  height: 120px;
+  object-fit: cover;
+}
 
-    .close:hover,
-    .close:focus {
-      color: black;
-      text-decoration: none;
-      cursor: pointer;
-    }
+.card-content {
+  padding: 0.5rem;
+}
 
-    .admin-button {
-      display: block;
-      margin: 10px 0;
-      padding: 10px;
-      background-color: #ffb6c1;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 16px;
-    }
+.card-content h4 {
+  margin: 0.5rem 0;
+  font-size: 1rem;
+}
 
-    .cart-button {
-      background: none;
-      border: none;
-      cursor: pointer;
-      font-size: 24px;
-      margin-left: 10px;
-    }
+.price {
+  font-weight: bold;
+  color: #00c6a9;
+}
 
-    @media screen and (max-width: 600px) {
-      .producto-tarjeta {
-        width: 90%;
-        margin: 10px auto;
-      }
+.cart-button {
+  position: absolute;
+  bottom: 0.5rem;
+  left: 0.5rem;
+  background-color: #00c6a9;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  color: white;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
 
-      header {
-        padding: 1em 0.5em;
-      }
+.edit-delete {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 0.5rem;
+}
+.edit-delete button {
+  flex: 1;
+  margin: 0 0.25rem;
+  font-size: 0.8rem;
+}
 
-      nav a {
-        display: block;
-        margin: 5px 0;
-      }
-    }
   </style>
 </head>
 <body>
   <header>
-    <img id="company-logo" src="" alt="Logo de la empresa">
-    <h1>Sorpresas in Style</h1>
-    <nav>
-      <a href="#">Inicio</a>
-    </nav>
-  </header>
+    <h1>Desayunos Bonitos</h1>
+  </header>  <section class="admin-panel">
+    <h2>Panel Admin</h2>
+    <form id="formulario">
+      <input type="text" id="nombre" placeholder="Nombre del desayuno" required />
+      <input type="number" id="precio" placeholder="Precio" required />
+      <input type="file" id="imagen" accept="image/*" required />
+      <button type="submit">Agregar desayuno</button>
+    </form>
+  </section>  <section class="products" id="lista-desayunos"></section>  <script>
+    const formulario = document.getElementById('formulario');
+    const listaDesayunos = document.getElementById('lista-desayunos');
+    let desayunos = JSON.parse(localStorage.getItem('desayunos')) || [];
 
-  <main>
-    <section id="productos-container"></section>
+    function renderizarDesayunos() {
+      listaDesayunos.innerHTML = '';
+      desayunos.forEach((item, index) => {
+        const card = document.createElement('div');
+        card.className = 'card';
 
-    <section id="carrito">
-      <h2>Carrito de Compras</h2>
-      <ul id="lista-carrito"></ul>
-      <p>Total: $<span id="total">0</span></p>
-      <button onclick="comprar()">Comprar</button>
-    </section>
-  </main>
+        const imagen = document.createElement('img');
+        imagen.src = item.imagen;
 
-  <!-- Modal de Administración -->
-  <div id="adminModal" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Panel de Administración</h2>
-      <form id="formulario-producto">
-        <input type="text" id="nombreProducto" placeholder="Nombre del desayuno" required><br><br>
-        <input type="number" id="precioProducto" placeholder="Precio" required><br><br>
-        <input type="file" id="imagenProducto" accept="image/*" required><br><br>
-        <button type="submit" class="admin-button">Agregar Desayuno</button>
-      </form>
-      <hr>
-      <h3>Desayunos Agregados</h3>
-      <div id="productos-agregados"></div>
-    </div>
-  </div>
+        const contenido = document.createElement('div');
+        contenido.className = 'card-content';
+        contenido.innerHTML = `
+          <h4>${item.nombre}</h4>
+          <p class="price">$${item.precio}</p>
+        `;
 
-  <button id="botonAdmin">⚙️</button>
+        const botonCarrito = document.createElement('button');
+        botonCarrito.className = 'cart-button';
+        botonCarrito.innerText = '+';
+        botonCarrito.onclick = () => alert(`Añadido ${item.nombre} al carrito!`);
 
-  <script>
-    // Obtener los elementos
-    var modal = document.getElementById("adminModal");
-    var botonAdmin = document.getElementById("botonAdmin");
-    var span = document.getElementsByClassName("close")[0];
-    var productosContainer = document.getElementById("productos-container");
-    var productosAgregados = document.getElementById("productos-agregados");
+        const acciones = document.createElement('div');
+        acciones.className = 'edit-delete';
+        acciones.innerHTML = `
+          <button onclick="editar(${index})">Editar</button>
+          <button onclick="eliminar(${index})">Eliminar</button>
+        `;
 
-    // Datos de los productos en LocalStorage
-    var productos = JSON.parse(localStorage.getItem("productos")) || [];
+        card.appendChild(imagen);
+        card.appendChild(contenido);
+        card.appendChild(botonCarrito);
+        contenido.appendChild(acciones);
+        card.appendChild(contenido);
 
-    // Mostrar el modal de administración
-    botonAdmin.onclick = function() {
-      modal.style.display = "block";
+        listaDesayunos.appendChild(card);
+      });
     }
 
-    // Cerrar el modal
-    span.onclick = function() {
-      modal.style.display = "none";
+    function editar(index) {
+      const item = desayunos[index];
+      document.getElementById('nombre').value = item.nombre;
+      document.getElementById('precio').value = item.precio;
+      desayunos.splice(index, 1);
+      localStorage.setItem('desayunos', JSON.stringify(desayunos));
+      renderizarDesayunos();
     }
 
-    // Cerrar modal si se hace clic fuera
-    window.onclick = function(event) {
-      if (event.target == modal) {
-        modal.style.display = "none";
-      }
+    function eliminar(index) {
+      desayunos.splice(index, 1);
+      localStorage.setItem('desayunos', JSON.stringify(desayunos));
+      renderizarDesayunos();
     }
 
-    // Función para agregar desayuno
-    document.getElementById("formulario-producto").addEventListener("submit", function(event) {
-      event.preventDefault();
-      
-      var nombre = document.getElementById("nombreProducto").value;
-      var precio = document.getElementById("precioProducto").value;
-      var imagen = document.getElementById("imagenProducto").files[0];
-      
-      if (imagen) {
-        var reader = new FileReader();
-        reader.onloadend = function() {
-          var nuevoProducto = {
-            nombre: nombre,
-            precio: precio,
-            imagen: reader.result
-          };
-          productos.push(nuevoProducto);
-          actualizarVista();
-          localStorage.setItem("productos", JSON.stringify(productos)); // Guardar en LocalStorage
-        };
-        reader.readAsDataURL(imagen);
-      }
+    formulario.addEventListener('submit', e => {
+      e.preventDefault();
+      const nombre = document.getElementById('nombre').value;
+      const precio = document.getElementById('precio').value;
+      const imagenInput = document.getElementById('imagen');
+      const reader = new FileReader();
+      reader.onload = () => {
+        desayunos.push({ nombre, precio, imagen: reader.result });
+        localStorage.setItem('desayunos', JSON.stringify(desayunos));
+        formulario.reset();
+        renderizarDesayunos();
+      };
+      reader.readAsDataURL(imagenInput.files[0]);
     });
 
-    // Función para actualizar la vista de productos
-    function actualizarVista() {
-      productosContainer.innerHTML = '';
-      productosAgregados.innerHTML = '';
-      productos.forEach((producto, index) => {
-        // Mostrar en la vista principal
-        var productoHTML = `
-          <div class="producto-tarjeta">
-            <img src="${producto.imagen}" alt="${producto.nombre}" class="producto-imagen">
-            <div class="producto-nombre">${producto.nombre}</div>
-            <div class="producto-precio">$${producto.precio}</div>
-            <button class="producto-boton" onclick="agregarAlCarrito(${index})">🛒</button>
-          </div>
-        `;
-        productosContainer.innerHTML += productoHTML;
-
-        // Mostrar en el panel de administración
-        var adminHTML = `
-          <div class="producto-tarjeta">
-            <img src="${producto.imagen}" alt="${producto.nombre}" class="producto-imagen">
-            <div class="producto-nombre">${producto.nombre}</div>
-            <div class="producto-precio">$${producto.precio}</div>
-            <button class="admin-button" onclick="eliminarProducto(${index})">Eliminar</button>
-            <button class="admin-button" onclick="editarProducto(${index})">Editar</button>
-          </div>
-        `;
-        productosAgregados.innerHTML += adminHTML;
-      });
-    }
-
-    // Función para agregar al carrito
-    var carrito = JSON.parse(localStorage.getItem("carrito")) || [];
-    function agregarAlCarrito(index) {
-      var producto = productos[index];
-      carrito.push(producto);
-      actualizarCarrito();
-      localStorage.setItem("carrito", JSON.stringify(carrito)); // Guardar en LocalStorage
-    }
-
-    function actualizarCarrito() {
-      var listaCarrito = document.getElementById("lista-carrito");
-      listaCarrito.innerHTML = '';
-      var total = 0;
-      carrito.forEach(producto => {
-        var li = document.createElement("li");
-        li.textContent = `${producto.nombre} - $${producto.precio}`;
-        listaCarrito.appendChild(li);
-        total += parseFloat(producto.precio);
-      });
-      document.getElementById("total").textContent = total.toFixed(2);
-    }
-
-    // Función para eliminar producto
-    function eliminarProducto(index) {
-      productos.splice(index, 1);
-      actualizarVista();
-      localStorage.setItem("productos", JSON.stringify(productos)); // Actualizar LocalStorage
-    }
-
-    // Función para editar producto
-    function editarProducto(index) {
-      var nuevoNombre = prompt("Nuevo nombre del producto:", productos[index].nombre);
-      var nuevoPrecio = prompt("Nuevo precio del producto:", productos[index].precio);
-      if (nuevoNombre && nuevoPrecio) {
-        productos[index].nombre = nuevoNombre;
-        productos[index].precio = nuevoPrecio;
-        actualizarVista();
-        localStorage.setItem("productos", JSON.stringify(productos)); // Actualizar LocalStorage
-      }
-    }
-
-    // Función para realizar compra
-    function comprar() {
-      if (carrito.length > 0) {
-        alert("Gracias por tu compra!");
-        carrito = [];
-        actualizarCarrito();
-        localStorage.setItem("carrito", JSON.stringify(carrito)); // Limpiar carrito en LocalStorage
-      } else {
-        alert("Tu carrito está vacío.");
-      }
-    }
-
-    // Inicializar vista
-    actualizarVista();
-    actualizarCarrito();
-
-  </script>
-</body>
+    renderizarDesayunos();
+  </script></body>
 </html>
